--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="https://github.com/fly-sy/show/tarball/master" class="btn">Download .tar.gz</a>
     </section>
     <section class="main-content">
-        <iframe src="show/index.html" width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+      <h2>hello word!</h2>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/fly-sy/show">Show</a> is maintained by <a href="https://github.com/fly-sy">fly-sy</a>.</span>
 
