--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
     <section class="main-content">
         <img src="images/1.gif" alt="">
-        <iframe src="index.html" width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+        <!-- <iframe src="index.html" width="100%" height="600px" frameborder="0" scrolling="no"></iframe> -->
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/fly-sy/show">Show</a> is maintained by <a href="https://github.com/fly-sy">fly-sy</a>.</span>
 
