--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<title>Bootstrap</title>
-<!-- css -->
-<style type="text/css">
-
-</style>
-</head>
-<body>
-    <h1>test测试</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="Keywords" content="">
+        <meta name="Description" content="">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/snake.css">
+    </head>
+    <body>
+        <div class="box">
+            <div class="btn">
+                <a href="javascript:void(0);" onclick="btnstart()">开始游戏</a>
+                <a href="javascript:void(0);" onclick="repaly()">重新开始</a>
+                <div id="score_ont">
+                    得分：<span id="score"></span>
+                </div>
+            </div>
+            <canvas id="canvas" width="600" height="600"></canvas>
+        </div>
+        <audio src="mp3/bg.mp3" id="bgid"></audio>
+        <audio src="mp3/eat.mp3" id="eat"></audio>
+        <audio src="mp3/over.mp3" id="over"></audio>
+        <script type="text/javascript" src="js/snake.js"></script>
+    </body>
 </html>
