--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <a href="https://github.com/fly-sy/show/tarball/master" class="btn">Download .tar.gz</a>
     </section>
     <section class="main-content">
-        <img src="show/images/1.gif" alt="">
-        <!-- <iframe src="index.html" width="100%" height="600px" frameborder="0" scrolling="no"></iframe> -->
+        <iframe src="main/index.html" width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/fly-sy/show">Show</a> is maintained by <a href="https://github.com/fly-sy">fly-sy</a>.</span>
 
